# flowrs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: flows.rs
comparison/: .gitignore  README.md  compare_results.py  config.toml  requirements.txt
comparison/python/: benchmark_nflows.py  two_moons_data.py
comparison/rust/: Cargo.toml
comparison/rust/src/: main.rs
examples/two_moons/: data.rs  main.rs  viz.rs
notebooks/: two_moons_nsf.ipynb  two_moons_python.ipynb
pyflowrs/: Cargo.toml  pyproject.toml
pyflowrs/src/: lib.rs
src/: actnorm.rs  coupling.rs  flow.rs  lib.rs  lu_linear.rs  made.rs  maf.rs  masked_linear.rs  mlp.rs  nsf.rs  realnvp.rs  spline.rs
