[package]
name = "flowrs"
version = "0.1.0"
edition = "2021"

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
ndarray = ["burn/ndarray"]

[dependencies]
burn = { version = "0.20", features = ["autodiff"] }
rand = "0.8"

[dev-dependencies]
rand_distr = "0.4"
env_logger = "0.11"
log = "0.4"
plotpy = "1"
